stampForce/src/objects/Attendance__c.object
<CustomObject>
    <description>A record of a contact being present at an event.</description>
    <fields>
        <fullName>Event__c</fullName>
        <description>Which even is this attendance record for?</description>
        <inlineHelpText>Which even is this attendance record for?</inlineHelpText>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Reward_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this person receive their reward email? This is checked automatically by a rule when they collected all available stamps.</description>
        <inlineHelpText>Should this person receive their reward email? This is checked automatically by a rule when they collected all available stamps.</inlineHelpText>
        <label>Send Reward Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stampforce_User__c</fullName>
        <description>Which user is attending this event?</description>
        <inlineHelpText>Which user is attending this event?</inlineHelpText>
        <label>Stampforce User</label>
        <referenceTo>Stampforce_User__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stamps_Collected__c</fullName>
        <description>How many stamps has this user collected at this event?</description>
        <inlineHelpText>How many stamps has this user collected at this event?</inlineHelpText>
        <label>Stamps Collected</label>
        <summaryFilterItems>
            <field>Stamp__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>Stamp__c.Attendee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stamps_Remaining__c</fullName>
        <description>How many stamps left does this person have left to collect at this event?</description>
        <formula>Total_Stamps_Available__c - Stamps_Collected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many stamps left does this person have left to collect at this event?</inlineHelpText>
        <label>Stamps Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Stamps_Available__c</fullName>
        <description>How many stamps are available at this event?</description>
        <formula>Event__r.Number_of_Stamps_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many stamps are available at this event?</inlineHelpText>
        <label>Total Stamps Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Attendance</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Attendance Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>